--- a/verl/trainer/config/critic_trainer.yaml
+++ b/verl/trainer/config/critic_trainer.yaml
@@ -27,7 +27,7 @@ defaults:
   - critic@critic: dp_critic
 
   # Reward model config.
-  - reward_model@reward_model: dp_reward_loop
+  - reward_model@reward_model: reward_model
 
   # Rollout correction config.
   - algorithm@algorithm.rollout_correction: rollout_correction
@@ -101,8 +101,8 @@ motion:
     critic: 'cotnav/models/prompts/reflect/critic_prompt_dspy.txt'
     motion: 'cotnav/models/prompts/reflect/motion_refine_prompt.txt'
 
-# motion_rollout:
-#   name: vllm
+reward_model:
+  use_reward_loop: false
 
 # custom reward function definition
 custom_reward_function:
