--- a/verl/trainer/config/critic_trainer_test.yaml
+++ b/verl/trainer/config/critic_trainer_test.yaml
@@ -51,7 +51,7 @@ actor_rollout_ref:
     override_config:
       model_config: {}
       moe_config:
-        freeze_moe_router: False
+        freeze_moe_router: True
 
     # Whether to use custom fused kernels (PostProcessing, for memory efficiency)
     use_fused_kernels: False
