--- a/verl/trainer/config/critic_trainer.yaml
+++ b/verl/trainer/config/critic_trainer.yaml
@@ -105,6 +105,10 @@ motion:
   model_name_or_path: Qwen/Qwen3-VL-2B-Instruct # Set by script
   trust_remote_code: true
 
+  nnodes: 1
+  n_gpus_per_node: 4
+  enable_sleep_mode: true
+
   dtype: bfloat16
   tensor_parallel_size: 1
   gpu_memory_utilization: 0.4 # 0.4 for 4 80GB Set by script
