--- a/verl/trainer/config/critic_trainer.yaml
+++ b/verl/trainer/config/critic_trainer.yaml
@@ -76,11 +76,11 @@ actor_rollout_ref:
       alpha: 64
 
       dropout: 0.0
-      target_modules:
-        - linear_qkv
-        - linear_proj
-        - linear_fc1
-        - linear_fc2
+      target_modules: all-linear
+        # - linear_qkv
+        # - linear_proj
+        # - linear_fc1
+        # - linear_fc2
 
       # exclude_modules: '.*visual.*'
       dropout_position: pre
@@ -127,7 +127,7 @@ actor_rollout_ref:
     mode: async
 
     # Sampling parameters
-    temperature: 1.1
+    temperature: 1.3
     top_p: 0.95
     prompt_length: 2048
     response_length: 512
