Modifications to stabilize model training and logging with new system prompts

--- a/verl/trainer/config/critic_sft_trainer_engine.yaml
+++ b/verl/trainer/config/critic_sft_trainer_engine.yaml
@@ -18,8 +18,8 @@ data:
   micro_batch_size_per_gpu: 4  # this is also val batch size
   max_token_len_per_gpu: 8192
   use_dynamic_bsz: True
-  train_files: ~/data/gsm8k/train.parquet
-  val_files: null
+  train_files: data/qwen_critic_sft_vgoal/parquet/train/train.parquet
+  val_files: data/qwen_critic_sft_vgoal/parquet/val/val.parquet
   train_max_samples: -1  # set to -1 to use full dataset
   val_max_samples: -1  # set to -1 to use full dataset
   # Multi-turn settings
@@ -43,6 +43,21 @@ data:
   # your tokenizer chat template settings.
   # Set to True to ignore input_ids mismatch and use the concatenated input_ids as the final input_ids.
   ignore_input_ids_mismatch: False
+
+model:
+  lora_rank: 32
+  lora_alpha: 32
+  target_modules: 'all-linear'
+    # - linear_fc1
+    # - linear_fc2
+    # - q_proj
+    # - v_proj
+    # - k_proj
+
+  # Hack for excluding visual backbone
+  # exclude_modules: ".*visual\\.blocks\\..*|.*visual\\.patch_embed\\..*|.*visual\\.pos_embed$|.*visual\\.rotary_pos_emb$"
+    # - '.*language_model\..*'
+  
 
 # Checkpoint configuration
 checkpoint:
